--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -93,7 +93,7 @@ stages:
   displayName: 'Deploy to the test environment'
   dependsOn: Dev
   jobs:
-  - deployment: Deploy
+  - deployment: DeployT
     pool:
       vmImage: 'ubuntu-16.04'
     environment: test
@@ -112,7 +112,7 @@ stages:
               appName: '$(WebAppNameTest)'
               package: '$(Pipeline.Workspace)/drop/$(buildConfiguration)/*.zip'
   - job: RunUITests
-    dependsOn: Deploy
+    dependsOn: DeployT
     displayName: 'Run UI tests'
     pool:
       vmImage: 'windows-2019'
